rm another security.manager